syntax = "proto3";

package ru.otus.protobuf.generated;

option java_multiple_files = true;

message ResponseMessage {
    int64 id = 1;
    int64 number = 2;
}

message RequestMessage {
    int64 id = 1;
    int64 firstValue = 2;
    int64 lastValue = 3;
}

service RemoteSeqService {
    rpc getSequence(RequestMessage) returns (stream ResponseMessage);
}
